[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgraph-db-docs"
version = "0.1.0"
description = "Documentation for MGraph-DB"
readme = "README.md"
authors = [{name = "Dinis Cruz", email = "dinis.cruz@owasp.org"}]
license = {file = "LICENSE"}
requires-python = ">=3.7"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "pymdown-extensions>=9.0",
]

[tool.setuptools]
packages = []